# blender_squirrel

./: .gitignore  .gitlab-ci.yml  README.md  blender_addon_installer.py  cli.py  install_all.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_lint_and_test.yml
lib/addon_sources/: gumroad.py  local_folder.py  source_control.py  website.py
lib/addons/: blender_addon.py  database.py
lib/settings/: loaders.py
squirrel/addon_sources/: debug.py  gumroad.py  website.py
squirrel/addon_sources/gumroad/: __init__.py  manager.py  product.py
squirrel/addons/: __init__.py  blender_addon.py  database.py  manager.py  zip_addon.py
squirrel/settings/: installer_settings.py
squirrel/validators/: __init__.py
tests/: fixtures.py  test_addon_database.py  test_addon_indexing.py  test_addon_install.py  test_addon_object.py  test_addon_validate.py  test_browser_get_cookies.py  test_gumroad_download.py  test_plugin_install.py  test_plugins_validate.py  test_settings_os_aware.py  test_settings_validate.py
tests/test_files/: invalid_settings.yaml  valid_settings.yaml
tests/test_files/addon_valid_single/: valid_plugin.py
tests/test_files/addon_valid_single_with_assets/: valid_plugin.py
tests/test_files/blender-2.80-test/: info.txt
tests/test_files/plugin_valid_folder/: __init__.py
ui-mockups/: ui_mockup.afdesign  ui_mockup_alt1.afdesign  ui_mockup_alt2.afdesign
utils/addon_sources/: gumroad.py
utils/addons/: validators.py  zip_addon.py
utils/plugin_sources/: gumroad.py
utils/plugins/: __init__.py  validators.py  zip_plugin.py
utils/settings/: __init__.py  installer_settings.py  loaders.py  settings_schema.json  validators.py
utils/validators/: blender_zip_addon_validator.py  installer_settings_validator.py
(+2 files in other folders)
