[tool.poetry]
name = "squirrel"
version = "0.1a0"
description = "Blender Squirrel - A addons manager for blender"
authors = ["Christopher Winkelmann <winkelchri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.0"
pyyaml = "^5.1"
loguru = "^0.3.2"
jsonschema = "^3.0"
requests = "^2.22"
beautifulsoup4 = "^4.8"
requests-html = "^0.10.0"
aiohttp = "^3.6"
dataset = "^1.1"
browser-cookie3 = "^0.9.1"

[tool.poetry.dev-dependencies]
pep8 = "^1.7"
pylint = "^2.3"
autopep8 = "^1.4"
pytest = "^5.0"
poetry-setup = "^0.3.6"
pycodestyle = "^2.5"
tox = "^3.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
